table header overlapped icon fixed

--- a/src/components/MarketTable/MarketTable.module.scss
+++ b/src/components/MarketTable/MarketTable.module.scss
@@ -144,7 +144,7 @@
     border-collapse: collapse;
     overflow: auto;
     border-left: 1px solid rgb(244, 244, 244);
-    #thead {
+    thead {
       position: relative;
       z-index: 1;
     }
